# packup

./: LICENSE  README.md  pyproject.toml
cli/: cli.py
